--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.4",
     "react-redux": "^7.2.5",
