--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "node-sass": "^6.0.1",
+    "object-to-formdata": "^4.1.0",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.4",
+    "react-number-format": "^4.7.3",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
