--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.15.4",
     "react-number-format": "^4.7.3",
     "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2",
