Update client api

--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.25",
+    "@types/node": "^12.20.36",
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "antd": "^4.16.13",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
+    "dotenv": "^10.0.0",
     "node-sass": "^6.0.1",
     "object-to-formdata": "^4.1.0",
     "query-string": "^7.0.1",
