--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-BASE_URL=https://localhost:44342/api
 PORT=4201
-API_KEY=6f03d5a6-0a1a-4734-b66c-1fc432729536
+REACT_APP_BASE_URL=https://mock-shop.azurewebsites.net/api
