--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.1",
+    "@microsoft/signalr": "^5.0.11",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -16,6 +17,7 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "dotenv": "^10.0.0",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "object-to-formdata": "^4.1.0",
     "query-string": "^7.0.1",
